[package]
name = "didkit-http"
version = "0.2.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"
description = "HTTP server for Verifiable Credentials and Decentralized Identifiers."
keywords = ["ssi", "did", "vc", "http", "api"]
license = "Apache-2.0"
license-file = "../LICENSE"
categories = ["web-programming::http-server"]
homepage = "https://github.com/dareden/didkit/tree/main/http/"
repository = "https://github.com/dareden/didkit/"
documentation = "https://docs.rs/didkit-http/"

exclude = [
  "/tests"
]

[features]
default = ["ring"]
ring = ["ssi/ring"]

[dependencies]
didkit = { version = "0.4", git = "https://github.com/dareden/didkit", features = ["http-did"] }
didkit-cli = { version = "0.2", git = "https://github.com/dareden/didkit" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
hyper = { version = "0.14", features = ["server", "client", "http1", "http2", "stream"] }
tower-service = "0.3"
futures-util = { version = "0.3", default-features = false }
ssi = { version = "0.4", git = "https://github.com/spruceid/ssi", default-features = false }
percent-encoding = "2.1"

[dev-dependencies]
did-method-key = { version = "0.1", git = "https://github.com/dareden/didkit" }
